--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -67,28 +67,6 @@
                     },
                     "tint": [0.45, 0.4, 0.5, 1]
                 },
-                "glass":{
-                    "type": "textured",
-                    "shader": "textured",
-                    "pipelineState": {
-                        "faceCulling":{
-                            "enabled": false
-                        },
-                        "depthTesting":{
-                            "enabled": true
-                        },
-                        "blending":{
-                            "enabled": true,
-                            "sourceFactor": "GL_SRC_ALPHA",
-                            "destinationFactor": "GL_ONE_MINUS_SRC_ALPHA"
-                        },
-                        "depthMask": false
-                    },
-                    "transparent": true,
-                    "tint": [1, 1, 1, 1],
-                    "texture": "glass",
-                    "sampler": "pixelated"
-                },
                 "grass":{
                     "type": "textured",
                     "shader": "textured",
@@ -105,8 +83,8 @@
                     "sampler": "default"
                 },
                 "monkey":{
-                    "type": "textured",
-                    "shader": "textured",
+                    "type": "lighted",
+                    "shader": "lighted",
                     "pipelineState": {
                         "faceCulling":{
                             "enabled": false
@@ -116,8 +94,12 @@
                         }
                     },
                     "tint": [1, 1, 1, 1],
-                    "texture": "monkey",
-                    "sampler": "default"
+                    "sampler": "default",
+                    "albedo" :"albedo",
+                    "roughness":"roughness",
+                    "specular":"specular",
+                    "emissive":"monkey",
+                    "ambient_occlusion":"ambient_occlusion"
                 },
                 "moon":{
                     "type": "lighted",
@@ -163,6 +145,22 @@
                                 "material": "metal"
                             }
                         ]
+                    },
+                    {
+                        "position": [0, 0, -1],
+                        "rotation": [0, 0, -1],
+                        "components": [
+                            {
+                                "type": "Light",
+                                "lightType": "Spot",
+                                "direction": [-1, 0, 0],
+                                "diffuse": [1, 1, 1],
+                                "specular": [1, 1, 1],
+                                "attenuation": [0.0095, 0.0095, 0.00095],
+                                "cone_angles.inner": 20,
+                                "cone-angles.outer": 50
+                            }
+                        ]
                     }
                 ]
             },
@@ -175,8 +173,7 @@
                         "material": "monkey"
                     },
                     {
-                        "type": "Movement",
-                        "linearVelocity": [0, 0.1, 0],
+                        "type": "Movement",              
                         "angularVelocity": [0, 45, 0]
                     }
                 ]
@@ -194,66 +191,6 @@
                 ]
             },
             {
-                "position": [0, 1, 2],
-                "rotation": [0, 0, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [0, 1, -2],
-                "rotation": [0, 0, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [2, 1, 0],
-                "rotation": [0, 90, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [-2, 1, 0],
-                "rotation": [0, 90, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [0, 3, 0],
-                "rotation": [90, 0, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
                 "position": [0, 10, 0],
                 "rotation": [45, 45, 0],
                 "scale": [5, 5, 5],
@@ -265,7 +202,7 @@
                     },
                     {
                         "type": "Movement",
-                        "angularVelocity": [0, 90, 0]
+                        "angularVelocity": [0, 30, 0]
                     }
                 ]
             }
